service/tests/snapshots/payments/acknowledges_unknown_event@payments.snap
---
source: tests/payments.rs
expression: "(stored_attempt.status(), lifecycle.0, lifecycle.1)"
---
(
    "session_created",
    "pending",
    "pending",
)
