service/tests/snapshots/payments/completes_paid_checkout@payments.snap
---
source: tests/payments.rs
expression: "(stored_attempt.status(), lifecycle.0, lifecycle.1)"
---
(
    "succeeded",
    "confirmed",
    "paid",
)
