service/tests/snapshots/payments/expires_unpaid_checkout@payments.snap
---
source: tests/payments.rs
expression: "(stored_attempt.status(), lifecycle.0, lifecycle.1)"
---
(
    "expired",
    "cancelled",
    "failed",
)
