service/tests/snapshots/payments/records_delayed_payment_failure@payments.snap
---
source: tests/payments.rs
expression: "(stored_attempt.status(), lifecycle.0, lifecycle.1)"
---
(
    "failed",
    "pending",
    "failed",
)
