service/tests/snapshots/payments/rejects_negative_amounts@payments.snap
---
source: tests/payments.rs
expression: "to_minor_units(amount, currency)"
---
Err(
    InvalidAmount,
)
