service/tests/snapshots/payments/rejects_unsupported_currency@payments.snap
---
source: tests/payments.rs
expression: "to_minor_units(amount, currency)"
---
Err(
    UnsupportedCurrency(
        "KES",
    ),
)
