service/tests/snapshots/payments/waits_for_delayed_payment@payments.snap
---
source: tests/payments.rs
expression: "(stored_attempt.status(), lifecycle.0, lifecycle.1)"
---
(
    "processing",
    "pending",
    "pending",
)
